# chinese-self-learn

./: .gitignore  AGENTS.md  DECISIONS.md  NEXT_STEPS.md  PROJECT_STATE.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260619_0001_initial.py  20260620_0002_auth_sessions.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  routes.py
apps/api/app/core/: __init__.py  settings.py  time.py
apps/api/app/db/: bootstrap.py  models.py  session.py
apps/api/app/integrations/ai/: __init__.py  provider.py
apps/api/app/integrations/notifications/: __init__.py  clients.py
apps/api/app/schemas/: analyze.py  auth.py  reviews.py  settings.py  vocabulary.py
apps/api/app/services/: auth.py  notifications.py  review_logic.py  reviews.py  text.py  vocabulary.py
apps/api/han_note_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: export_openapi.py  inspect_live_ai_explain_payload.py  run_daily_reminders.py  verify_live_ai_provider.py
apps/api/tests/: test_ai_provider.py  test_auth_service.py  test_review_logic.py  test_settings.py  test_text_service.py
apps/mobile/: .env.example  App.tsx  app.json  metro.config.js  package.json
apps/web/: next.config.mjs  package-lock.json  (+2 more)
docs/: mobile-web-deploy.md  ui-design-handoff.md
scripts/: bootstrap-mobile-node-modules.cjs  generate-shared-client.mjs  mobile-web-smoke-test.cjs  run-mobile-expo.cjs  start-mobile-web.cjs  web-smoke-test.cjs
(+30 files in other folders)
