[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "han-note-api"
version = "0.1.0"
description = "FastAPI backend for Han Note"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "greenlet>=3.0.3,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.30.5,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
